pkg/gateway/xds/translator/testdata/out/xds-ir/http-route-regex.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        headers:
        - name: re_header
          stringMatch:
            safeRegex:
              regex: .*
        queryParameters:
        - name: re_query
          stringMatch:
            safeRegex:
              regex: .*
        safeRegex:
          regex: /v1/.*
      name: regex-route
      route:
        cluster: regex-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/regex-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
